<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oleeze.login4.MainActivity">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_margin="15dp"
            android:text="@string/user_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_margin="13dp"
            android:hint="@string/enter_your_name"
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="match_parent" />


        <EditText
            android:layout_margin="13dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="13dp"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="13dp"
            android:inputType="textPassword"
            android:hint="@string/re_enter_your_password"
            android:id="@+id/editTextCpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="10dp"
            android:inputType="number"
            android:hint="@string/enter_your_age"
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button

            android:id="@+id/buttonRegister"
            android:text="@string/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="@string/already_registered_sign_in_here"
            android:id="@+id/textViewSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</RelativeLayout>
